# fast-micro-service

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  uv.toml
apis/: middlewares.py
apis/entrypoint/: factory.py  main.py
apis/knowledge_base/: factory.py  tags.py
apis/knowledge_base/v1/: __init__.py  knowledge_file.py
apis/knowledge_base/v2/: __init__.py
apis/user_center/: factory.py  tags.py
apis/user_center/v1/: __init__.py  account.py  auth.py  common.py  resource.py  role.py
common/: context.py  decorators.py  encrypt.py  enums.py  exceptions.py  fastapi.py  init_ctx.py  log.py  monkey_patch.py  pydantic.py  regex.py  responses.py  schemas.py  service_api.py  types.py  utils.py
common/constant/: messages.py  validate.py
configs/: config.py  defines.py
deploy/docker/: back-end-base.Dockerfile  back-end.Dockerfile
etc/: template.yaml
releases/s000/: README.md
script/menu_and_perm/: create_account.py  menu_pessmissions_update.py
service/: crud.py  dependencies.py  exceptions.py
service/account/: schema.py
service/auth/: helper.py  impl.py  schema.py
service/resource/: impl.py  schema.py
service/role/: schema.py
service/third/: base.py
storages/: enums.py
storages/aredis/: util.py
storages/oss/: __init__.py
storages/oss/provider/: aliyun.py  aminio.py  file.py  huaweiyun.py
storages/redis/: keys.py
storages/relational/base/: fields.py  functions.py  models.py  validators.py
storages/relational/migrate/: env.py
storages/relational/migrate/knowledge_base/: 0_20250409160715_init.py
storages/relational/migrate/user_center/: 0_20250409160709_init.py  1_20250410102118_rename_icon.py
storages/relational/models/: __init__.py  knowledge_base.py  user_center.py
tasks/: acelery.py  consumer_health_check.py
tasks/long_live/: operation-record-consume.py
tests/: user_test.py
